--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <li><a href="#top" onclick="closeMenu()">Home</a></li>
             <li><a href="#about" onclick="closeMenu()">About me</a></li>
-            <li><a href="#services" onclick="closeMenu()">Services</a></li>
+            <li><a href="#services" onclick="closeMenu()">Experience</a></li>
             <li><a href="#work" onclick="closeMenu()">My Work</a></li>
             <li><a href="#contact" onclick="closeMenu()">Contact me</a></li>
         </ul>
@@ -178,7 +178,7 @@
         <div class="border border-gray-400 rounded-lg px-8 py-12
         hover:shadow-black cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 dark:hover:bg-darkHover dark:hover:shadow-white">
             <img src="./images/pink-logo.jpg" alt="" class="w-10 rounded-xl">
-            <h3 class="text-lg my-4 text-gray-700 dark:text-white">Data Science Mentor</h3>
+            <h3 class="text-lg my-4 text-gray-700 dark:text-white">Physics Wallah</h3>
             <p class="text-sm text-gray-600 leading-5 dark:text-white/80">Guiding Students to learn the concept of data science...</p>
             <!-- <a href="" class="flex items-center gap-2 text-sm mt-5">Read more <img src="./images/right-arrow.png" alt=""
                 class="w-4"></a> -->
